--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- This makes the JAR executable -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <!-- Change this to your actual main class -->
+                            <mainClass>com.example.HelloWorld</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
